fix spacing on about page

--- a/src/About.css
+++ b/src/About.css
@@ -53,15 +53,23 @@
 .about-me p {
   color: #52525B;
 }
+.about-me li {
+  color: #52525B;
+}
+
+.about-me h4 {
+  margin: 1rem 0;
+}
 
 .about-me img {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   max-width: 95%;
   max-height: 40%;
   object-fit: cover;
   transform: rotate(-2deg);
   border-radius: 10px;
 }
+
 
 .about-me-pic {
   display: flex;
